<?xml version="1.0"?>
<package format="2">
  <name>camera_publisher</name>
  <version>0.0.0</version>
  <description>The camera_publisher package</description>

  <maintainer email="cmoreno@ccom.unh.edu">Coral Moreno</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <!--depend>rosbag</depend -->
  <depend>sensor_msgs</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

